# lurium

./: Makefile.am  lurium.sln  readme.html  settings.gradle
src/: Makefile.am  control_client.cpp
src/bin2h/: bin2h.vcxproj  main.cpp
src/control_server/: Makefile.am  build.sh  config.ini  control_server.cpp  control_server.h  control_server.vcxproj  control_server.vcxproj.filters  main.cpp  readme.txt  start.sh  stop.sh
src/lurium/: httprequest.cpp  httprequest.js  lurium.vcxproj  lurium.vcxproj.filters  main_loop_android_jni.cpp  websocket.cpp  websocket.js  websocket_impl.h  welcome_textbox_android.cpp
src/lurium_android/: build.gradle
src/nibbles_server/: Makefile.am  build.sh  config.ini  default0.ini  main.cpp  nibbles.cpp  nibbles.h  nibbles_bot.cpp  nibbles_bot.h  nibbles_server.cpp  nibbles_server.h  nibbles_server.vcxproj  nibbles_server.vcxproj.filters  small0.ini  start.sh  stop.sh
src/nibbles_www/: bot.html  index.html  plan.txt  readme.txt
src/obj2h/: main.cpp  obj2h.vcxproj  obj2h.vcxproj.filters
src/scorch_android/: AndroidManifest.xml  build.gradle
src/scorch_client/: arrow_buttons_view.h  cabin_ttf.h  logo_png.h  main.cpp  make_resources.bat  scorch_client-emscripten.nmake  scorch_client-emscripten.vcxproj  scorch_client.vcxproj  scorch_client.vcxproj.filters  scorch_controller.h  (+3 more)
src/scorch_server/: Makefile.am  build.sh  config.ini  default0.ini  ground.h  main.cpp  scorch.cpp  scorch.h  scorch_bot.cpp  scorch_bot.h  scorch_message.h  scorch_server.cpp  scorch_server.h  scorch_server.vcxproj  scorch_server.vcxproj.filters  small0.ini
(+60 files in other folders)
